stretch cards fix

--- a/src/sass/layout/_home_page.scss
+++ b/src/sass/layout/_home_page.scss
@@ -41,11 +41,14 @@
   }
 }
 
-.hp__gallery_img-wrapper {
-  margin-bottom: 10px;
+.hp__gallery_el {
+  padding-bottom: 42px;
 }
 
 .hp__gallery_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 5px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     filter 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
