--- a/src/sass/utils/_style_txt.scss
+++ b/src/sass/utils/_style_txt.scss
@@ -21,6 +21,7 @@
   line-height: 1.34;
   text-transform: uppercase;
   width: 280px;
+  padding-top: 10px;
 }
 .film_genre {
   font-size: 12px;
